сделала ответы на вопросы

--- a/miganie_svetodiodom.srcs/sources_1/new/ответы на вопросы.md
+++ b/miganie_svetodiodom.srcs/sources_1/new/ответы на вопросы.md
@@ -1,14 +1,104 @@
 # Лаб. №2, (с.19)
 ## Задание 1.6
-constant COUNTER_WIDTH - не может быть изменено после ее определения
 
-к COUNTER_PERIOD прибавляется единица, результат принадлежит типу real
+    localparam COUNTER_WIDTH = int($ceil($clog2(COUNETR_PERIOD + 1)));
+
+localparam COUNTER_WIDTH - Объявление локального параметра или переменной, которая имеет ограниченное действие и видимость внутри определённого блока кода
 
 log2 - вычисление логарифма от полученного значения
 
 ceil - округление до ближайшего бОльшего числа
 
-positive используется для обозначения положительного числа
+int'() - Преобразование в тип integer
 
 ## Задание 1.8
 При мигании светодиода пивлекается больше внимания и шансов обнаружить ошибку в работе прибора больше
+
+## Задание 2.1
+Синтезируемое подмножество включает элементы языка, которые могут быть преобразованы в машинный код и загружены на устройство без изменений.
+
+Несинтезируемое подмножество используется для моделирования работы устройства без загрузки кода на реальное устройство. Элементы несинтезируемого подмножества позволяют проводить симуляцию задержек срабатывания транзисторов, отдельных вентилей и устройств.
+
+## Задание 3.1 - 3.2
+
+1. Комбинационные логические схемы, преобразующие входные сигналы в соответствии с логической функцией.
+
+2. Входные и выходные сигналы.
+
+3. Таблица истинности, описывающая все возможные комбинации входных сигналов и соответствующие им выходные значения.
+
+4. Логические функции, описывающие преобразование входных сигналов в выходные.
+
+## Задание 3.3
+
+В случае ошибки на устройстве без сигнал i_rs не будет возможности перевести устройство в исходное состояние.
+
+## Задание 3.4
+
+Типы real и time являются несинтезируемыми, их необходимо преобразовывать в другой тип данных. В testbench есть возможность использовать эти типы, поскольку он не синтезируется. 
+
+## Задание 3.5
+
+Да, можно разделить значение счётчика на число. Такое описание будет синтезировано. Умножение счётчика на число также будет синтезировано.
+
+## Задание 4.1
+
+Элементы дизайна в системе Verilog располагаются на кристалле микросхемы в соответствии с иерархией модулей. Верхний уровень иерархии представляет собой основной модуль, содержащий другие модули более низкого уровня. Эти модули могут содержать ещё более мелкие модули и так далее. Соединение между модулями осуществляется с помощью проводов.
+
+## Задание 4.2
+
+Сигнал тактовой частоты необходим для синхронизации всех процессов, которые будут в модуле. Если указать период ТЧ 1 нс, это означает, что время между двумя последовательными импульсами тактового сигнала составляет 1 наносекунду. Это очень короткое время, и оно может привести к нестабильной работе системы, особенно если используются устаревшие компоненты или недостаточно эффективная система охлаждения.
+
+## Задание 4.3
+
+IOSTANDARD в этой записи означает «стандарт ввода-вывода» (Input Output Standard). Он указывает на то, какой стандарт напряжения и тока будет использоваться для подключения вывода к внешним компонентам. 
+
+## Задание 5.1
+
+* Плата: при отключении питания все компоненты платы, включая процессор, оперативную память и другие микросхемы, перестают работать. При включении питания компоненты начинают загружаться и инициализироваться, подготавливаясь к работе.
+
+* Прошивка: при отключении питания прошивка сохраняется в энергонезависимой памяти (например, флеш-памяти) и остаётся доступной после включения питания. Однако некоторые настройки и параметры могут быть потеряны, если они не были сохранены в энергонезависимой памяти.
+
+## Задание 5.2
+
+JTAG  — это стандарт, который необходим для тестирования и диагностики собранных плат и систем.
+
+## Задание 6.1
+
+Always_ff используется для описания последовательностной логики, то есть схем с памятью. 
+Always_comb используется для описания комбинаторной логики, то есть логических выражений без памяти.
+
+## Задание 6.2
+
+Блокирующее присваивание а = с выполняется последовательно, не допуская параллельных операций.  Неблокирующие присваивания a <= c выполняются параллельно.
+
+## Задание 6.3
+
+    а) reg [COUNTER_WIDTH -1 : 0] counter_value = '0;
+
+Все биты COUNTER_WIDTH переменной counter_value типа reg равны 0
+
+    б) always_ff @(posedge i_clk) begin
+
+При изменении сигнала i_clk по переднему фронту выполняются действия прописанные после begin
+
+    в) assign o_led = {0:(~i_rstn | led_on), default:(~i_rstn | ~led_on)} ;
+
+Значение переменной o_led изменяется при изменении значения сигнала в правой части выражения. o_led равна 0 при i_rstn = 0 и led_on = 1, иначе led_on остается неизменным. 
+
+    д) always #(T_CLK/2) i_clk = ~i_clk;
+
+Строка тестбэнча, переменная i_clk меняет свое значение с частотой T_CLK/2.
+
+    е) 	nitial begin
+    i_rstn = 1'b1;
+    #10e3 i_rstn = 1'b0;
+    #(20*T_CLK) i_rstn = 1'b1;
+    end
+
+Блока, в котором описываются начальные условия и поведение системы. Переменной i_rstn изначально присваивается одно значение, после задержек # присваиваются следующие.
+
+## Задание 6.4
+
+Reg сохраняет своё значение до тех пор, пока не будет изменено, в то время как wire не может хранить данные и используется только для передачи сигналов между элементами схемы.
+
